# fintheon

./: .env.local.db  .env.production  .gitattributes  .gitignore  .infisical.example.json  .mcp.json  .vercelignore  AGENTS.md  App.tsx  CLAUDE.md  FINTHEON-LATEST-CODEBASE-PLAN-2026-03-09.md  HARPER.md  NOTICES.md  OpenClaw-README-NEW.md  README.md  SETUP.md  SUB-AGENT-RULES.md  WORKSPACE.md  cao-wolf-chat-prototype.html  config.json  fintheon  fintheon-logo-dithermorphism-preview.html  fintheon.config.ts  fly.toml  frontend-vercel.env.example  icon-bank-preview.html  index.css  index.html  loading-globe-preview.html  main.cjs  main.tsx  mini-widget-entry.tsx  mini-widget.html  morning-standup-2026-04-06.md  node_modules  package-lock.json  package.json  priced-in-research-background-prototype.html  secrets.env.example  skills-lock.json  (+7 more)
.claude/: launch 2.json  launch.json  settings.json  settings.local.json
.codex/: config.toml  hooks.json
.cursor/: environment.json  handoff-log.md  install.sh  shared-context.md
.zed/: settings.json
backend-hono/: .dockerignore  .env  .env.bak-20260418-084041  .env.example  .env.template  CLAUDE.md  Dockerfile  Dockerfile.news-worker  Dockerfile.riskflow-worker  fly.gepa-cron.toml  fly.news-worker.toml  fly.riskflow-worker.toml  fly.toml  (+3 more)
hermes-sidecar/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  entrypoint.py  fly.toml  pyproject.toml
hermes-sidecar/hermes_sidecar/: __init__.py  app.py  auth.py  config.py  models.py  runtime.py
hermes-sidecar/launchd/: io.solvys.fintheon-hermes.plist
hermes-sidecar/plugins/gepa/: engine.py  plugin.yaml
(+3193 files in other folders)
