# [claude-code 2026-04-19] S27-T2 W1b — Hermes Python Sidecar (FastAPI wrapper around NousResearch Hermes Agent).
# Managed with uv. Do not use pip/venv.
[project]
name = "hermes-sidecar"
version = "0.1.0"
description = "Fintheon sidecar — NousResearch Hermes Agent + hermes-lcm + icarus-plugin behind a typed HTTP contract."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.1.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
]
# Upstream NousResearch Hermes Agent + hermes-lcm plugin are installed by W2b
# (Claude-07) during real integration. They are not in pyproject because upstream
# release tags / repo paths are volatile; keeping them out lets the core sidecar
# boot green today. hermes_sidecar/runtime.py detects the upstream package via
# importlib and falls back to a stub runtime when absent.
#
# W2b installs via (in hermes-sidecar/):
#   uv pip install "git+https://github.com/NousResearch/hermes-agent.git@<tag>" \
#                  "git+https://github.com/stephenschoettler/hermes-lcm.git@main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py311"
